# province-economy

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/plans/: agent-frontend-backend-interaction.md  docker-containerization.md  go-server-refactor.md  interactive-dashboard.md  year-switching.md
agent/: agent.py  rag.py  tools.py
agent/knowledge/: events_2022_pandemic.md  yearly_context.md
data/: README.md
data_cache/: indicators_2023.csv  indicators_2023_metadata.csv  indicators_2024.csv  indicators_2024_metadata.csv
diagrams/: 01-system-architecture.excalidraw  02-data-pipeline.excalidraw  03-docker-architecture.excalidraw  04-model-comparison.excalidraw  06-agent-qa-architecture.excalidraw  08-contribution-summary.excalidraw
nginx/: default.conf
output/: 01_中国地图_综合得分热力图_2024.html  02_中国地图_聚类梯队分布_2024.html
sample_outputs (1)/sample_outputs/: 01_中国地图_综合得分热力图_2024.html  02_中国地图_聚类梯队分布_2024.html
src/: config.py
src/agent/: README.md  agent.py  logger.py  rag.py  token_counter.py  tools.py
src/data/: README.md  __init__.py  cleaner.py  fetcher.py  nbs_exports.py  nbs_yearbook.py  yearbook_ocr.py
src/indicators/: __init__.py  cleaning.py
src/models/: README.md  __init__.py  analyzer.py  cache.py  clustering.py  entropy.py  reporter.py
src/server/: README.md  __init__.py  data_api.py  main.py
src/server-go/: go.mod  main.go  radar.go
src/visualization/: README.md  (+7 more)
tests/: test_agent_eval.py  test_rag.py  test_tools.py
(+58 files in other folders)
