[project]
name = "province-economy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "akshare>=1.18.60",
    "anthropic>=0.40",
    "beautifulsoup4>=4.14.3",
    "chromadb>=0.4",
    "dbnomics>=1.2.7",
    "fastapi>=0.115.0",
    "kaleido>=1.3.0",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "numpy>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
ocr = [
    "opencv-python-headless>=4.13.0.92",
    "rapidocr-onnxruntime>=1.4.4",
]
